--- a/HTML-CSS Intro/activity.html
+++ b/HTML-CSS Intro/activity.html
@@ -1,11 +1,105 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="description" content="Free Web tutorials for HTML and CSS">
-        <meta name="author" content="John Doe">
-        <title>A Meaningful Page Title</title>
+        <meta name="description" content="for plextech">
+        <meta name="author" content="Winston Lo">
+        <title>Button</title>
+        <style>
+            body {
+                background-color: #f5f5f5; /* Default background color */
+                color: black; /* Default text color */
+            }
+
+            body.dark-mode {
+                background-color: #222; /* Dark mode background color */
+                color: white; /* Dark mode text color */
+            }
+
+            .banner{
+                width: 100%;
+                background-size: cover;
+                background-position: center;
+            }
+            .navbar{
+                width: 85%;
+                margin: auto;
+                padding: 20px 0;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+            }
+            .navbar ul li{
+                list-style: none;
+                display: inline-block;
+                margin: 0 20px;
+                position: relative;
+            }
+            .navbar ul a{
+                text-decoration: none;
+                color: inherit;
+                text-transform: uppercase ;
+            }
+            .navbar ul li::after{
+                content: '';
+                height: 3px;
+                width: 0;  
+                background: #009688;
+                position: absolute;
+                left: 0;
+                bottom: -10px;
+                transition: 0.5s;
+            }
+            .navbar ul li:hover::after{
+                width: 100%;
+            }
+            .content{
+                width: 100%;
+                position: absolute;
+                top: 50%;
+                transform: translateY(-50%);
+                text-align: center;
+            }
+            .light, .dark {
+                width: 50px;
+                height: 20px;
+                color: black;
+                background-color: white;
+                border: none;
+                cursor: pointer;
+            }
+
+            .light.dark-mode, .dark.dark-mode {
+                color: white;
+                background-color: black;
+            }
+        </style>
+        <script>
+            function toggleDarkMode() {
+                const body = document.querySelector('body');
+                body.classList.toggle('dark-mode');
+            }
+        </script>
     </head>
     <body>
-        
+        <div class="banner">
+            <div class="navbar">
+                <img src="" alt="">
+
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#" >Linkedin</a></li>
+                    <li><a href="#">Github</a></li>
+                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">Twitter</a></li>
+                </ul>
+            </div>
+            <div class="content">
+                <h1>Welcome to my website</h1>
+                <p>My name is Winston Lo</p>
+                <button class="light" onclick="toggleDarkMode()">light</button>
+                <button class="dark" onclick="toggleDarkMode()">dark</button>
+            </div>
+        </div>
     </body>
 </html>
