--- a/HTML-CSS Intro/index.html
+++ b/HTML-CSS Intro/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- TODO: Link your stylesheet -->
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <p>Assignment 1</p>
@@ -21,24 +21,55 @@
     <p>Student TODOs</p>
     <p>Row 3</p>
     <div class="wrapper">
+      <div class="row3r">
+        <div class="red3"></div>
+      </div>
+      <div class="row3b">
+        <div class="blue3"></div>
+      </div>
     </div>
     <p>Row 4</p>
     <div class="wrapper">
+        <div class="row4red"></div>
+        <div class="row4blue"></div>
     </div>
     <p>Row 5</p>
     <div class="wrapper">
+      <div class="row5">
+        <div class="red5"></div>
+      </div>
     </div>
     <p>Row 6</p>
     <div class="wrapper">
+      <div class="row6">
+        <div class="row6b"></div>
+      </div>
     </div>
     <p>Row 7</p>
     <div class="wrapper">
+      <div class="red7"></div>
+      <div class="blue7">
+        <div class="green7"></div>
+      </div>
     </div>
     <p>Row 8</p>
     <div class="wrapper">
+      <div class="row8">
+        <div class="orange"></div>
+        <div class="orange"></div>      
+        <div class="orange"></div>      
+        <div class="orange"></div>
+        <div class="orange"></div>
+      </div>
     </div>
     <p>Row 9</p>
     <div class="wrapper">
+      <div class="row9">
+        <div class="green9"></div>
+        <div class="green9"></div>
+        <div class="green9"></div>
+        <div class="green9"></div>
+      </div>
     </div>
   </body>
 </html>
